// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericList Renders actions button when 'actions' prop is provided 1`] = `
<div
  className="fd-panel fd-panel--no-background"
>
  <div
    className="fd-action-bar sc-ksYbfQ bYVodr"
    data-e2e-id="toolbar"
  >
    <div
      className="fd-action-bar__header sc-frDJqD dkgsYC"
      data-e2e-id="toolbar-header"
    >
      <h1
        className="fd-action-bar__title"
      >
        
      </h1>
    </div>
    <div
      className="fd-action-bar__actions sc-kvZOFW cMNfXb"
      data-e2e-id="toolbar-actions"
    >
      <div
        className="fd-search-input generic-list-search"
      >
        <div
          className="fd-popover"
        >
          <div
            className="fd-popover__control"
          >
            <div
              className="fd-combobox-control"
            >
              <div
                className="fd-input-group fd-input-group--after"
              >
                <input
                  className="fd-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Search..."
                  type="text"
                  value=""
                />
                <span
                  className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button"
                >
                  <button
                    className="fd-button--light sap-icon--search"
                    onClick={[Function]}
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            aria-hidden={true}
            className="fd-popover__body fd-popover__body--no-arrow"
          >
            <nav
              className="fd-menu"
            >
              <ul
                className="fd-menu__list"
              >
                <li
                  className="fd-menu__item"
                  onClick={[Function]}
                >
                  first_entry
                </li>
                <li
                  className="fd-menu__item"
                  onClick={[Function]}
                >
                  testdescription1
                </li>
                <li
                  className="fd-menu__item"
                  onClick={[Function]}
                >
                  second_entry
                </li>
                <li
                  className="fd-menu__item"
                  onClick={[Function]}
                >
                  testdescription2
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="fd-panel__body"
  >
    <div
      className="fd-panel sc-caSCKo jjNSwx"
    >
      <div
        className="fd-panel__body sc-TOsTZ iphcEB"
      >
        <table
          className="fd-table sc-kgAjT EPChu"
        >
          <thead>
            <tr>
              <th>
                Name
              </th>
              <th>
                
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                first_entry
              </td>
              <td>
                <div
                  className="fd-popover"
                >
                  <div
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="fd-popover__control"
                    >
                      <button
                        className="fd-button--light sap-icon--vertical-grip"
                        onClick={[Function]}
                      />
                    </div>
                  </div>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                second_entry
              </td>
              <td>
                <div
                  className="fd-popover"
                >
                  <div
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="fd-popover__control"
                    >
                      <button
                        className="fd-button--light sap-icon--vertical-grip"
                        onClick={[Function]}
                      />
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`GenericList Renders title and description 1`] = `
<div
  className="fd-panel fd-panel--no-background"
>
  <div
    className="fd-action-bar sc-ksYbfQ bYVodr"
    data-e2e-id="toolbar"
  >
    <div
      className="fd-action-bar__header sc-frDJqD dkgsYC"
      data-e2e-id="toolbar-header"
    >
      <h1
        className="fd-action-bar__title"
      >
        title
      </h1>
      <p
        className="fd-action-bar__description"
      >
        description
      </p>
    </div>
    <div
      className="fd-action-bar__actions sc-kvZOFW cMNfXb"
      data-e2e-id="toolbar-actions"
    >
      <div
        className="fd-search-input generic-list-search"
      >
        <div
          className="fd-popover"
        >
          <div
            className="fd-popover__control"
          >
            <div
              className="fd-combobox-control"
            >
              <div
                className="fd-input-group fd-input-group--after"
              >
                <input
                  className="fd-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Search..."
                  type="text"
                  value=""
                />
                <span
                  className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button"
                >
                  <button
                    className="fd-button--light sap-icon--search"
                    onClick={[Function]}
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            aria-hidden={true}
            className="fd-popover__body fd-popover__body--no-arrow"
          >
            <nav
              className="fd-menu"
            >
              <ul
                className="fd-menu__list"
              >
                <li
                  className="fd-menu__item fd-menu__item--no-entries"
                >
                  No entries found
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="fd-panel__body"
  >
    <div
      className="fd-panel sc-caSCKo jjNSwx"
    >
      <div
        className="fd-panel__body sc-TOsTZ iphcEB"
      >
        <table
          className="fd-table sc-kgAjT EPChu"
        >
          <thead>
            <tr />
          </thead>
          <tbody />
        </table>
        <p
          className="sc-cJSrbW gXxzRq"
        >
          There are no items to show
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`GenericList Renders with minimal props 1`] = `
<div
  className="fd-panel fd-panel--no-background"
>
  <div
    className="fd-action-bar sc-ksYbfQ bYVodr"
    data-e2e-id="toolbar"
  >
    <div
      className="fd-action-bar__header sc-frDJqD dkgsYC"
      data-e2e-id="toolbar-header"
    >
      <h1
        className="fd-action-bar__title"
      >
        
      </h1>
    </div>
    <div
      className="fd-action-bar__actions sc-kvZOFW cMNfXb"
      data-e2e-id="toolbar-actions"
    >
      <div
        className="fd-search-input generic-list-search"
      >
        <div
          className="fd-popover"
        >
          <div
            className="fd-popover__control"
          >
            <div
              className="fd-combobox-control"
            >
              <div
                className="fd-input-group fd-input-group--after"
              >
                <input
                  className="fd-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Search..."
                  type="text"
                  value=""
                />
                <span
                  className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button"
                >
                  <button
                    className="fd-button--light sap-icon--search"
                    onClick={[Function]}
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            aria-hidden={true}
            className="fd-popover__body fd-popover__body--no-arrow"
          >
            <nav
              className="fd-menu"
            >
              <ul
                className="fd-menu__list"
              >
                <li
                  className="fd-menu__item fd-menu__item--no-entries"
                >
                  No entries found
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="fd-panel__body"
  >
    <div
      className="fd-panel sc-caSCKo jjNSwx"
    >
      <div
        className="fd-panel__body sc-TOsTZ iphcEB"
      >
        <table
          className="fd-table sc-kgAjT EPChu"
        >
          <thead>
            <tr />
          </thead>
          <tbody />
        </table>
        <p
          className="sc-cJSrbW gXxzRq"
        >
          There are no items to show
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`GenericList Skips rendering actions when 'actions' prop passes skipAction() call 1`] = `
<div
  className="fd-panel fd-panel--no-background"
>
  <div
    className="fd-action-bar sc-ksYbfQ bYVodr"
    data-e2e-id="toolbar"
  >
    <div
      className="fd-action-bar__header sc-frDJqD dkgsYC"
      data-e2e-id="toolbar-header"
    >
      <h1
        className="fd-action-bar__title"
      >
        
      </h1>
    </div>
    <div
      className="fd-action-bar__actions sc-kvZOFW cMNfXb"
      data-e2e-id="toolbar-actions"
    >
      <div
        className="fd-search-input generic-list-search"
      >
        <div
          className="fd-popover"
        >
          <div
            className="fd-popover__control"
          >
            <div
              className="fd-combobox-control"
            >
              <div
                className="fd-input-group fd-input-group--after"
              >
                <input
                  className="fd-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Search..."
                  type="text"
                  value=""
                />
                <span
                  className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button"
                >
                  <button
                    className="fd-button--light sap-icon--search"
                    onClick={[Function]}
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            aria-hidden={true}
            className="fd-popover__body fd-popover__body--no-arrow"
          >
            <nav
              className="fd-menu"
            >
              <ul
                className="fd-menu__list"
              >
                <li
                  className="fd-menu__item"
                  onClick={[Function]}
                >
                  first_entry
                </li>
                <li
                  className="fd-menu__item"
                  onClick={[Function]}
                >
                  testdescription1
                </li>
                <li
                  className="fd-menu__item"
                  onClick={[Function]}
                >
                  second_entry
                </li>
                <li
                  className="fd-menu__item"
                  onClick={[Function]}
                >
                  testdescription2
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="fd-panel__body"
  >
    <div
      className="fd-panel sc-caSCKo jjNSwx"
    >
      <div
        className="fd-panel__body sc-TOsTZ iphcEB"
      >
        <table
          className="fd-table sc-kgAjT EPChu"
        >
          <thead>
            <tr>
              <th>
                Name
              </th>
              <th>
                
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                first_entry
              </td>
            </tr>
            <tr>
              <td>
                second_entry
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
